--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
+    "gh-pages": "^2.0.1",
     "identity-obj-proxy": "^3.0.0",
     "prettier": "^1.15.2",
     "prop-types": "^15.6.2",
@@ -31,9 +32,9 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "start": "yarn run develop",
     "format": "prettier --write \"src/**/*.js*\"",
-    "test": "jest --coverage --verbose"
+    "test": "jest --coverage --verbose",
+    "deploy": "yarn run build && gh-pages -d public -b master"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
