--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "gatsby-transformer-sharp": "^2.1.8",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0"
+    "react-headroom": "^2.2.4",
+    "react-helmet": "^5.2.0",
+    "react-masonry-component": "^6.2.1",
+    "react-masonry-css": "^1.0.12"
   },
   "devDependencies": {
     "enzyme": "^3.7.0",
