--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-dom": "^16.6.3",
     "react-headroom": "^2.2.4",
     "react-helmet": "^5.2.0",
-    "react-masonry-component": "^6.2.1",
-    "react-masonry-css": "^1.0.12"
+    "react-sticky": "^6.0.3"
   },
   "devDependencies": {
     "enzyme": "^3.7.0",
