--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,44 +1,77 @@
 [
   {
-    "id": "yyw",
-    "title": "You & Your Wedding",
+    "id": "immediate",
+    "title": "Immediate Media",
     "description": "UI Design lead on major projects for key specialist publishing brands including You & Your Wedding and Gardeners’ World with an increase in key metrics after initial launches. Collaborated closely with UX architects product leads, editorial, and the development teams to deliver products meeting a range of commercial objectives including new business models and advertising solutions. Worked with multiple teams across both editorial and advertising sectors with important commercial partners. Frequently presented and reviewed design work across the business. Mentored other designers within the team including sharing learning from adopting Sketch & InVision. Worked with strict brand guidelines from our key partners. Developed design systems for an integrated workflow using InVision. Honoured to have been recognised with a nomination for designer of the year across the company.",
-    "images": [
+    "examples": [
       {
-        "id": "articles",
-        "alt": "Articles"
+        "title": "You & Your Wedding homepage",
+        "images": [
+          {
+            "id": "homePage",
+            "alt": "You & Your Wedding",
+            "bgColour": "#f4eeee"
+          }
+        ]
       },
       {
-        "id": "dressFinder",
-        "alt": "Dress Finder"
+        "title": "Galleries",
+        "images": [
+          {
+            "id": "galleries",
+            "alt": "Galleries",
+            "bgColour": "#f8fcfa"
+          }
+        ]
       },
       {
-        "id": "galleries",
-        "alt": "Galleries"
+        "title": "Dress Finder",
+        "images": [
+          {
+            "id": "dressFinder1",
+            "alt": "Dress Finder",
+            "bgColour": "#10253d"
+          },
+          {
+            "id": "dressFinder2",
+            "alt": "Dress Finder",
+            "bgColour": "#e8ecf0"
+          }
+        ]
       },
       {
-        "id": "homePage",
-        "alt": "Home Page"
+        "title": "Navigation",
+        "images": [
+          {
+            "id": "navigation1",
+            "alt": "Navigation",
+            "bgColour": "#f0ece7"
+          },
+          {
+            "id": "navigation2",
+            "alt": "Navigation",
+            "bgColour": "#998d7f"
+          }
+        ]
       },
       {
-        "id": "navigation1",
-        "alt": "Navigation"
-      },
-      {
-        "id": "navigation2",
-        "alt": "Navigation"
-      },
-      {
-        "id": "styleGuide",
-        "alt": "Style Guide"
-      },
-      {
-        "id": "venuesPage",
-        "alt": "Venues Page"
+        "title": "Category, sub cat & article",
+        "images": [
+          {
+            "id": "articles",
+            "alt": "Articles",
+            "bgColour": "#e9eef5"
+          },
+          {
+            "id": "styleGuide",
+            "alt": "Style Guide",
+            "bgColour": "#2d2d2d"
+          }
+        ]
       }
     ],
     "bgColour": "#310738",
-    "route": "/projects/you-and-your-wedding"
+    "route": "/projects/immediate-media"
   },
   {
     "id": "sohoHouse",
@@ -133,7 +166,8 @@
           {
             "id": "savedMatchStyleFlow",
             "alt": "Navigation",
-            "bgColour": ""
+            "bgColour": "",
+            "padding": "0"
           }
         ]
       },
@@ -186,7 +220,69 @@
   {
     "id": "beamly",
     "title": "Beamly",
-    "description": "",
+    "description": "Leading digital content design and contributing to creative direction with the aim of making Beamly addictive and the “go-to” social network for TV. Day-to-day activities include, conceiving, designing and delivering a broad array of visuals including: show branding, editorial content, email templates, Image treatments, app release marking, concept design for pitches to broadcasters, third parties (NBC, MTV, SKY, Viacom, Comcast, ITV, Channel 4, Budweiser, Halifax) social widgets, viral games and wireframes.",
+    "examples": [
+      {
+        "title": "Beamly articles & show page",
+        "images": [
+          {
+            "id": "web",
+            "alt": "Beamly articles & show page",
+            "bgColour": "#9cbce1"
+          }
+        ]
+      },
+      {
+        "title": "Show pages on web and app",
+        "images": [
+          {
+            "id": "showPages",
+            "alt": "Show pages on web and app",
+            "bgColour": "#f1dfd8"
+          }
+        ]
+      },
+      {
+        "title": "iOS app",
+        "images": [
+          {
+            "id": "iosApp",
+            "alt": "iOS app",
+            "bgColour": "#defbff"
+          }
+        ]
+      },
+      {
+        "title": "Articles",
+        "images": [
+          {
+            "id": "articles",
+            "alt": "Articles",
+            "bgColour": "#f15982"
+          }
+        ]
+      },
+      {
+        "title": "Social treatments",
+        "images": [
+          {
+            "id": "treatmentDesign",
+            "alt": "Social treatments",
+            "bgColour": "#2d2d2d"
+          }
+        ]
+      },
+      {
+        "title": "Zeebox tech blog",
+        "images": [
+          {
+            "id": "techBlog",
+            "alt": "Zeebox tech blog",
+            "bgColour": "#baf3e6"
+          }
+        ]
+      }
+    ],
     "bgColour": "#FFE6F9",
     "route": "/projects/beamly"
   },
